--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
+@font-face {
+    font-family: "Roboto Slab";
+    src: url("fonts/RobotoSlab.ttf");
+}
+
+@font-face {
+    font-family: "Work Sans";
+    src: url("fonts/WorkSans.ttf");
+}
+
 button {
     border: none;
     line-height: 1.6;
     background-color: #146be2;
     font-weight: 700;
-    font-family: "Roboto Slab", "Roboto Slab-fallback", "Times New Roman", serif;
+    font-family: "Roboto Slab", "Times New Roman", serif;
     color: white;
     padding: 10px 20px;
     transition: color .3s, background-color .3s, border-color .3s;
@@ -26,4 +36,14 @@ a {
     color: #146be2;
     text-decoration: none;
     transition: color .3s;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
