--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ button {
     font-family: "Roboto Slab", "Times New Roman", serif;
     color: white;
     padding: 10px 20px;
+    width: 128px;
     transition: color .3s, background-color .3s, border-color .3s;
 }
 
@@ -18,6 +19,7 @@ body {
     font-family: "Work Sans", "Work Sans-fallback", Arial, sans-serif;
     font-weight: 400;
     font-size: 16px;
+    width: 200px;
     line-height: 1.6;
     -webkit-font-smoothing: antialiased;
 }
@@ -34,12 +36,14 @@ h2 {
     font-weight: bold;
 }
 
-#city-filter-heading {
+#city-filter-heading,
+#gender-filter-heading {
     margin-left: 0px;
     user-select: none;
 }
 
-#city-filter-arrow {
+#city-filter-arrow,
+#gender-filter-arrow {
     vertical-align: middle;
     transition: transform .3s ease;
 }
